--- a/server/package.json
+++ b/server/package.json
@@ -2,20 +2,22 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "type": "module",
+  "main": "index.ts",
   "scripts": {
-    "start": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon --exec ts-node index.ts"
   },
   "author": "Mansi Kundariya",
   "license": "ISC",
   "dependencies": {
-    "@types/node": "^22.5.1",
+    "@types/node": "^22.5.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
+    "express": "^4.21.0",
     "mongoose": "^8.6.0",
     "nodemon": "^3.1.4",
-    "typescript": "^5.5.4"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.2"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21"
   }
 }
